# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = parking-garage
description = Add a short description here!
author = Adam Hamblin
author-email = ahamblin84@gmail.com
license = mit
version = 1.0
url = http://...
long-description = file: README.md
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.6

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src
setup_requires = pyscaffold>=3.1a0,<3.2a0
# Add here dependencies of your project (semicolon-separated), e.g.
# install_requires = numpy; scipy
install_requires =
    falcon==1.4.1
    PyYAML==4.2b1
    packaging==17.1
# Add here test requirements (semicolon-separated)
tests_require = pytest

[options.packages.find]
where = src
exclude =
    tests

[test]
# py.test options when running `python setup.py test`
addopts = tests

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 3.0.3
package = parking-garage
